--- a/istio-beta/Dockerfile
+++ b/istio-beta/Dockerfile
@@ -3,7 +3,7 @@ FROM amazoncorretto:11-alpine-jdk
 RUN apk --no-cache add curl
 
 MAINTAINER nobody.com
-COPY target/alpha.jar app.jar
+COPY target/beta.jar app.jar
 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app.jar"]
