--- a/istio-alpha/pom.xml
+++ b/istio-alpha/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<version>3.0.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
