envoy proxy does not trace kafka protocol - direct reference to jaeger needed from apps

--- a/istio-alpha/src/main/resources/application.properties
+++ b/istio-alpha/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name = i-am-alpha
-beta-service-url=http://localhost:8090
+
+beta-service-url = http://localhost:8090
 server.port = 8080
+
+kafka.broker = localhost:9092
+
+spring.zipkin.baseUrl = http://localhost:9411
