--- a/istio-alpha/pom.xml
+++ b/istio-alpha/pom.xml
@@ -33,6 +33,16 @@
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 			<version>3.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
