--- a/istio-alpha/src/main/resources/application-cloud.properties
+++ b/istio-alpha/src/main/resources/application-cloud.properties
@@ -1,3 +1,5 @@
 spring.application.name = i-am-alpha
-beta-service-url=the-beta-service.default.svc.cluster.local:8080
+beta-service-url = the-beta-service.default.svc.cluster.local:8080
 server.port = 8080
+
+kafka.broker = host.docker.internal:19092
