--- a/istio-beta/src/main/resources/application.properties
+++ b/istio-beta/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name = i-am-beta
 server.port = 8090
+
+kafka.broker = localhost:9092
+
+spring.zipkin.baseUrl = http://localhost:9411
