delta and theta

--- a/istio-delta/src/main/resources/application.properties
+++ b/istio-delta/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name = i-am-alpha
+spring.application.name = i-am-delta
 
 beta-service-url = http://localhost:8090
-server.port = 8080
+server.port = 8091
+
+kafka.broker = localhost:9092
 
 spring.zipkin.baseUrl = http://localhost:9411
