--- a/istio-delta/pom.xml
+++ b/istio-delta/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>guru.bonacci.istio</groupId>
-	<artifactId>alpha</artifactId>
+	<artifactId>delta</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>alpha</name>
+	<name>delta</name>
 	<description>Go</description>
 
 	<properties>
@@ -25,11 +25,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 			<version>3.0.3</version>
 		</dependency>
@@ -37,6 +32,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>2.7.2</version>
 		</dependency>
 
 		<dependency>
